overflow-fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,3 +87,7 @@ html {
   scrollbar-width: none;
   scroll-behavior: smooth;
 }
+
+/* * {
+  outline: 1px solid red;
+} */
